<resources>
    <string name="app_name">FirstExam</string>
    <string name="exam1">2021exam1</string>
    <string name="exam2">2021exam2</string>
    <string name="exam3">2021exam3</string>
    <string name="exam4">2020exam1</string>
    <string name="exam5">2020exam2</string>
    <string name="exam6">2019exam1</string>
    <string name="exam7">2019exam2</string>
    <string name="exam8">2018exam2</string>
    <string name="exam9">2018exam1</string>
    <string name="button_one">하나</string>
    <string name="button_two">둘</string>
    <string name="button_three">셋</string>
    <string name="switch1">전원</string>
    <string name="radio_one">하나</string>
    <string name="radio_two">둘</string>
    <string name="radio_three">셋</string>
    <string name="power_on">Power On</string>
    <string name="power_off">Power Off</string>
    <string name="hello_world">Hello World</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="number">0</string>
    <string name="open_alertDialog">Open AlertDialog</string>
    <string name="confirm">Confirm</string>
    <string name="doYouWantToDelete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletesuccess">삭제성공</string>
    <string name="deletefail">삭제실패</string>
    <string name="kor_confirm">확인</string>
    <string name="exam">시험</string>
    <string name="data_insert">데이터 입력</string>
    <string-array name="spinner_userType">
        <item>관리자</item>
        <item>사용자</item>
        <item>손님</item>
    </string-array>
    <string name="employer">관리자</string>
    <string name="user">사용자</string>
    <string name="customer">손님</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
</resources>